@@ -17,7 +17,7 @@ requires a OpenGL capable video card to run.
 Help ('\fB-H\fR' for extended help).
 .TP
 \fB\-WIDTHxHEIGHT, \-\-viewport WIDTHxHEIGHT\fR
-Set the viewport size. If \-f is also supplied, will attempt to set the video mode to this also.
+Set the viewport size. If \-f is also supplied, will attempt to set the video mode to this also. Add ! to make the window non-resizable.
 .TP
 \fB\-f\fR
 Fullscreen
